--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             var img = 0;
             function count(){
             img++;
-            document.getElementById('clickcount').innerHTML = "Click count: " + img;
+            document.getElementById('clickcount').innerHTML = "LIKE 數: " + img;
                             }
         </script>
         <div class="heading1">
