--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
             <br>神以前都係人，不過佢做到人做唔到嘅野。
             <br>之後佢就係神。
 
-            <p><img src="C:\Users\Chan Wai Shing\Desktop\CD.png"
+            <p><img src="..\CD.png"
             img width=320px
             >
             <br>你睇下，叫左你冷靜d架啦，而家因為你唔冷靜搞成咁啦。
             
-            <p><img src="C:\Users\Chan Wai Shing\Desktop\maxresdefault.jpg"
+            <p><img src="..\maxresdefault.jpg"
             img width=320px
             >
             <br>阿木：我要買GTR！
