--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             >
             <br>你睇下，叫左你冷靜d架啦，而家因為你唔冷靜搞成咁啦。
             
-            <p><img src="..\maxresdefault.jpg"
+            <p><img src="maxresdefault.jpg"
             img width=320px
             >
             <br>阿木：我要買GTR！
