--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
             <p><img src="maxresdefault.jpg"
             img width=320px
             >
-            <br>阿木：我要買GTR！
-	    <br>木父：我買BENZ俾你丫。 
-	    <br>阿木：我要買GTR！ 
-	    <br>木父：加隻「撈」。 
-	    <br>阿木：我要買GTR！ 
-	    <br>木父：但系你尋晚差D死啵。 
-	    <br>阿木：我尋晚如果揸GTR 我使炒？
-	    <br>木父：你揸GTR你死左拉！
+            <br><strong>阿木</strong>：我要買GTR！
+	    <br><strong>木父</strong>：我買BENZ俾你丫。 
+	    <br><strong>阿木</strong>：我要買GTR！ 
+	    <br><strong>木父</strong>：加隻「撈」。 
+	    <br><strong>阿木</strong>：我要買GTR！ 
+	    <br><strong>木父</strong>：但系你尋晚差D死啵。 
+	    <br><strong>阿木</strong>：我尋晚如果揸GTR 我使炒？
+	    <br><strong>木父</strong>：你揸GTR你死左拉！
             </p>
 
         <div class="button1">
