--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             <br>神以前都係人，不過佢做到人做唔到嘅野。
             <br>之後佢就係神。
 
-            <p><img src="CD.png"
+            <p><a href="https://youtu.be/Syj4WvvKL-I?t=192"><img src="CD.png"
             img width=320px
-            >
+            ></a>
             <br>你睇下，叫左你冷靜d架啦，而家因為你唔冷靜搞成咁啦。
             
             <p><img src="maxresdefault.jpg"
