--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             ></a>
             <br>你睇下，叫左你冷靜d架啦，而家因為你唔冷靜搞成咁啦。
             
-            <p><img src="maxresdefault.jpg"
+            <p><a href="https://www.youtube.com/watch?v=1n0QsWxVFjE"><img src="maxresdefault.jpg"
             img width=320px
-            >
+            ></a>
             <br><strong>阿木</strong>：我要買GTR！
 	    <br><strong>木父</strong>：我買BENZ俾你丫。 
 	    <br><strong>阿木</strong>：我要買GTR！ 
