--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
             <br>神以前都係人，不過佢做到人做唔到嘅野。
             <br>之後佢就係神。
 
-            <p><a href="https://youtu.be/Syj4WvvKL-I?t=192"><img src="CD.png"
+            <p><a href="https://youtu.be/Syj4WvvKL-I?t=192" target="_blank"><img src="CD.png"
             img width=320px
             ></a>
             <br>你睇下，叫左你冷靜d架啦，而家因為你唔冷靜搞成咁啦。
             
-            <p><a href="https://www.youtube.com/watch?v=1n0QsWxVFjE"><img src="maxresdefault.jpg"
+            <p><a href="https://www.youtube.com/watch?v=1n0QsWxVFjE" target="_blank"><img src="maxresdefault.jpg"
             img width=320px
             ></a>
             <br><strong>阿木</strong>：我要買GTR！
