--- a/index.html
+++ b/index.html
@@ -56,5 +56,6 @@
         <div class="button1">
         <button id="clickcount" onClick="count()">請俾LIKE!</button>
         </div>
+	<a href="https://docs.google.com/spreadsheets/d/1cNGii_LV7S3vX4t-x5LkgxY_o47rocKDzkDfAcJI8C8/edit?usp=sharing" target="_blank">Google sheet with questions</a>
     </body>
 </html>
