--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         </div>
             <h2>阿木金句</h2>
 
-            <p>知唔知咩係神呀?
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Xa4VU7chm9M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	    <p>知唔知咩係神呀?
             <br>神以前都係人，不過佢做到人做唔到嘅野。
             <br>之後佢就係神。
 
